--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body class="root">
     <div class="page">
-      <header class="header">
+      <header class="header header_theme_position">
         <img src="./images/logo.svg" alt="Логотип Место" class="header__logo" />
         <div class="header__line"></div>
       </header>
       <main class="content">
-        <section class="profile">
+        <section class="profile profile_theme_position">
           <div class="profile__avatar-container">
             <img
               src="./images/кусто.jpg"
@@ -24,60 +24,60 @@
           <div class="profile__info">
             <div class="profile__info-container">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <div class="profile__button_edit">
+              <div class="profile__button-edit">
                 <img
                   src="./images/Vectoredit.svg"
                   alt="Карандаш"
-                  class="profile__button_edit_image"
+                  class="profile__image-edit"
                 />
               </div>
             </div>
             <p class="profile__about">Исследователь океана</p>
           </div>
           <div class="popup">
-            <div class="popup_container">
-              <div class="popup_body">
-                <h2 class="popup_text">Редактировать профиль</h2>
-                <form class="popup_form">
-                  <div class="popup_item">
+            <div class="popup__container">
+              <div class="popup__body">
+                <h2 class="popup__text">Редактировать профиль</h2>
+                <form class="popup__form">
+                  <div class="popup__item">
                     <input
-                      class="popup_input popup_input_first"
+                      class="popup__input popup__input_first"
                       type="text"
                       value="Жак-Ив Кусто"
                       autocomplete="off"
                     />
-                    <div class="popup_line"></div>
+                    <div class="popup__line"></div>
                   </div>
-                  <div class="popup_item">
+                  <div class="popup__item">
                     <input
-                      class="popup_input popup_input_second"
+                      class="popup__input popup__input_second"
                       type="text"
                       value="Исследователь океана"
                       autocomplete="off"
                     />
-                    <div class="popup_line"></div>
+                    <div class="popup__line"></div>
                   </div>
-                  <button type="submit" class="popup_button">Сохранить</button>
+                  <button type="submit" class="popup__button">Сохранить</button>
                 </form>
                 <div class="popup__close">
                   <img
                     src="./images/CloseIcon.svg"
                     alt="закрывающий крестик"
-                    class="popup__close_image"
+                    class="popup__close-image"
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="profile__button_add">
+          <div class="profile__button-add">
             <img
               src="./images/Vector.svg"
               alt="Кнопка добавления"
-              class="profile__button_add_image"
+              class="profile__image-add"
             />
           </div>
         </section>
-        <section class="elements">
+        <section class="elements elements_theme_position">
           <div class="element">
             <img
               src="./images/Алтай.jpg"
@@ -166,7 +166,7 @@
           </div>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer footer_theme_position">
         <p class="footer__text">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
