Refactoring: убрала горизонтальный скролл иотцентрировала блок

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body class="root">
     <div class="page">
-      <header class="header header_theme_position">
+      <header class="header">
         <img src="./images/logo.svg" alt="Логотип Место" class="header__logo" />
       </header>
       <main class="content">
-        <section class="profile profile_theme_position">
+        <section class="profile">
           <img
             src="./images/кусто.jpg"
             alt="Жак Ив Кусто"
@@ -39,7 +39,7 @@
             />
           </button>
         </section>
-        <section class="elements elements_theme_position">
+        <section class="elements">
           <div class="element">
             <img
               src="./images/Алтай.jpg"
@@ -48,11 +48,13 @@
             />
             <div class="element__text">
               <h2 class="element__title">Алтай</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -63,11 +65,13 @@
             />
             <div class="element__text">
               <h2 class="element__title">Тюмень</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -78,11 +82,13 @@
             />
             <div class="element__text">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -93,11 +99,13 @@
             />
             <div class="element__text">
               <h2 class="element__title">Домбай</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -108,27 +116,31 @@
             />
             <div class="element__text">
               <h2 class="element__title">Карачаевск</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
           <div class="element">
             <img src="./images/козлик.png" alt="Козел" class="element__image" />
             <div class="element__text">
               <h2 class="element__title">Горный козел</h2>
-              <img
-                src="./images/Vector3.svg"
-                alt="Сердце"
-                class="element__like"
-              />
+              <button type="button" class="element__button">
+                <img
+                  src="./images/Vector3.svg"
+                  alt="Сердце"
+                  class="element__like"
+                />
+              </button>
             </div>
           </div>
         </section>
       </main>
-      <footer class="footer footer_theme_position">
+      <footer class="footer">
         <p class="footer__text">&copy; 2020 Mesto Russia</p>
       </footer>
       <div class="popup">
