Refactoring:исправить функционал закрытия попап по клику на overlay и esc

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 id="image-input"
                 autocomplete="off"
                 placeholder="Название"
-                minlength="1"
+                minlength="2"
                 maxlength="30"
                 required
               />
@@ -141,7 +141,7 @@
           </button>
         </div>
       </div>
-      <div class="popup popup_full-screen" tabindex="-1">
+      <div class="popup popup_full-screen">
         <figure class="popup__container-full-screen">
           <img src="./images/Алтай.jpg" alt="" class="popup__full-image" />
           <figcaption class="popup__full-text">текст</figcaption>
