--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
         </div>
       </template>
     </div>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
