--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,6 @@
         </div>
       </template>
     </div>
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
